--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
             <span></span>
             <span></span>
         </div>
-        <img src="./images/Logo.png" class="logo" alt="">
+        <img src="images/Logo.png" class="logo" alt="">
         <div class="search-box">
             <input type="text" class="search-bar" placeholder="search">
-            <button class="search-btn"><img src="./images/search.png" alt=""></button>
-            <img src="./images/voice-search.png" alt="">
+            <button class="search-btn"><img src="images/search.png" alt=""></button>
+            <img src="images/voice-search.png" alt="">
         </div>
         <div class="user-options">
-            <img src="./images/Create.png" class="icon" id="creat" alt="">
-            <img src="./images/more.png" class="icon" alt="">
-            <img src="./images/notification.png" class="icon" alt="">
+            <img src="images/Create.png" class="icon" id="creat" alt="">
+            <img src="images/more.png" class="icon" alt="">
+            <img src="images/notification.png" class="icon" alt="">
             <div class="user-dp">
-                <img src="./images/Jack.png" alt="">
+                <img src="images/Jack.png" alt="">
             </div>
         </div>
     </nav>
