--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,14 +34,14 @@
 
     <!-- sidebar -->
     <div class="side-bar">
-        <a href="#" class="links active"><img src="./images/home.png" alt="">home</a>
-        <a href="#" class="links"><img src="./images/explore.png" alt="">explore</a>
-        <a href="#" class="links"><img src="./images/subscriprion.png" alt="">subscription</a>
+        <a href="#" class="links active"><img src="images/home.png" alt="">home</a>
+        <a href="#" class="links"><img src="images/explore.png" alt="">explore</a>
+        <a href="#" class="links"><img src="images/subscriprion.png" alt="">subscription</a>
         <hr class="seperator">
-        <a href="#" class="links"><img src="./images/library.png" alt="">library</a>
-        <a href="#" class="links"><img src="./images/history.png" alt="">history</a>
+        <a href="#" class="links"><img src="images/library.png" alt="">library</a>
+        <a href="#" class="links"><img src="images/history.png" alt="">history</a>
         <a href="#" class="links"><img src="images/playlist.png" alt="">your video</a>
-        <a href="#" class="links"><img src="./images/gerard.png" alt="">watch leater</a>
+        <a href="#" class="links"><img src="images/gerard.png" alt="">watch leater</a>
         <a href="#" class="links"><img src="images/like.png" alt="">like video</a>
         <a href="#" class="links"><img src="images/show-more.png" alt="">show more</a>
     </div>
@@ -65,7 +65,7 @@
         <!-- <div class="video">
             <img src="images/Jack.png" class="thumbnail" alt="">
             <div class="content">
-                <img src="./images/Jack.png"class="channel-icon" alt="">
+                <img src="images/Jack.png"class="channel-icon" alt="">
                 <div class="info">
                     <h4 class="title">youtube clone 2021 | create working youtube clone</h4>
                     <p class="channel-name">modern web</p>
