--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- videos -->
     <div class="video-container">
-        <!-- <div class="video">
+         <div class="video">
             <img src="images/Jack.png" class="thumbnail" alt="">
             <div class="content">
                 <img src="images/Jack.png"class="channel-icon" alt="">
@@ -72,7 +72,7 @@
                     <p #id="veiws"><span>14.k veiws</span>.<span>2 years ago</span></p>
                 </div>
             </div>
-        </div> -->
+        </div> 
     </div>
 
     <script src="https://apis.google.com/js/api.js"></script>
