--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="#" class="links"><img src="images/library.png" alt="">library</a>
         <a href="#" class="links"><img src="images/history.png" alt="">history</a>
         <a href="#" class="links"><img src="images/playlist.png" alt="">your video</a>
-        <a href="#" class="links"><img src="images/gerard.png" alt="">watch leater</a>
+        <a href="#" class="links"><img src="images/gerard.png" alt="">watch later</a>
         <a href="#" class="links"><img src="images/like.png" alt="">like video</a>
         <a href="#" class="links"><img src="images/show-more.png" alt="">show more</a>
     </div>
